--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    
+
     <title>webGL3DViewer | WebGLTest</title>
     <div class="stage" id="stage"></div>
 
@@ -25,6 +25,10 @@
   
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
+      <div class="gallery">
+        <div class="gallery-item">
+          <a rel="ar" href="usdzs\newBalance.usdz"><img src="png\timer.png"></a>
+        </div>
+      </div>
   </body>
 </html>
