--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <!-- glTFを取り扱うためにライブラリ -->
     <script src="js\libs\GLTFLoader.js"></script>
+    
+
+    <!-- createjsを取り扱うためにライブラリ -->
+    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 
     <script src="js\index.js"></script>
   
