--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
       <div class="gallery">
         <div class="gallery-item">
-          <a rel="ar" href="usdzs\newBalance.usdz"><img src="jpg\m1300cls.jpg"></a>
+          <a rel="ar" href="usdzs\GameObject.usdz"><img src="jpg\m1300cls.jpg"></a>
         </div>
       </div>
   </body>
